2007-06-04  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

2007-06-04  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/method.py:  Fix harddrive install method error
	checking (#242492, patch from Andrew Edmunds
	<andrew DOT edmunds AT yahoo.com.au>).

	* pykickstart/base.py (KickstartCommand.__init__):  Add currentLine
	attribute.
	(BaseHandler.dispatcher):  Set currentLine attribute on the command
	handler.
	* pykickstart/parser.py (KickstartParser.handleCommand):  Set
	currentLine attribute on the handler.
	* pykickstart/commands/auth.py (FC3_Authconfig.parse):  Use
	currentLine instead of reassembling the list of arguments, since
	otherwise we might miss quoting (#241657).

	* pykickstart/parser.py (KickstartParser.readKickstart):  Use urlopen
	to open a kickstart file so includes can be given by a URL in addition
	to a local file.

2007-05-18  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/user.py (FC6_UserData.__str__):  Fix typo in
	outputting --iscrypted option.

2007-05-14  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

2007-04-24  Chris Lumens  <clumens@redhat.com>

	* pykickstart/version.py (stringToVersion):  Better regexes for
	splitting strings into family and version.

	* pykickstart/version.py:  Add support for RHEL3 (jlaska AT
	redhat.com).
	* pykickstart/handlers/control.py:  Likewise.
	* pykickstart/handlers/rhel3.py:  Likewise.

	* pykickstart/commands/mouse.py:  Initial support for RHEL3 commands
	(jlaska AT redhat.com).

2007-04-13  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  This is pykickstart version 1.0.

	* docs/programmers-guide:  Update documentation.

2007-04-12  Chris Lumens  <clumens@redhat.com>

	* docs/programmers-guide:  Update documentation.

	* pykickstart/base.py (DeprecatedCommand):  This should be an abstract
	class.

2007-03-30  Chris Lumens  <clumens@redhat.com>
